samples/_failures_safe/1761521083_da85e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e1c5b41.c: In function ‘main’:
./samples/SAFE/__tmp_4e1c5b41.c:140:12: error: missing terminating " character
  140 |     printf("Example: 2024-01-15T10:30:00 INFO
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4e1c5b41.c:140:5: error: expected expression at end of input
  140 |     printf("Example: 2024-01-15T10:30:00 INFO
      |     ^~~~~~
./samples/SAFE/__tmp_4e1c5b41.c:140:5: error: expected declaration or statement at end of input
